--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -18,23 +18,16 @@ jobs:
         node-version: [16.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Cache node modules
-        id: yarn-cache-debug # needed below to check for cache hit or miss
-        uses: actions/cache@v2
-        with:
-          path: './BrightID/node_modules'
-          key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+          cache: 'yarn'
 
       - name: Install dependencies
-        if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
-        run: yarn --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: debug build
         run: |
@@ -44,7 +37,7 @@ jobs:
           cd android && ./gradlew assembleDebug && cd ..
 
       - name: Upload Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: brightId-debug.apk
           path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/apk/debug/app-debug.apk
@@ -64,23 +57,16 @@ jobs:
         node-version: [16.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Cache node modules
-        id: yarn-cache-debug # needed below to check for cache hit or miss
-        uses: actions/cache@v2
-        with:
-          path: './BrightID/node_modules'
-          key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+          cache: 'yarn'
 
       - name: Install dependencies
-        if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
-        run: yarn --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: Decrypt keystore and Google Credential
         run: ./scripts/staging.sh
@@ -94,13 +80,13 @@ jobs:
         run: cd android && ./gradlew bundleStaging && cd ..
 
       - name: Upload apk
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: brightId-staging.apk
           path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/apk/staging/app-staging.apk
 
       - name: Upload aab
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: brightId-staging.aab
           path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/bundle/staging/app-staging.aab
@@ -121,23 +107,16 @@ jobs:
         node-version: [16.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Cache node modules
-        id: yarn-cache-release # needed below to check for cache hit or miss
-        uses: actions/cache@v2
-        with:
-          path: './BrightID/node_modules'
-          key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+          cache: 'yarn'
 
       - name: Install dependencies
-        if: steps.yarn-cache-release.outputs.cache-hit != 'true'  # only install when no cache found
-        run: yarn --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: Decrypt keystore and Google Credential
         run: ./scripts/decrypt.sh
@@ -151,13 +130,13 @@ jobs:
         run: cd android && ./gradlew bundleRelease && cd ..
 
       - name: Upload apk
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: brightId-release.apk
           path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/apk/release/app-release.apk
 
       - name: Upload aab
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: brightId-release.aab
           path: /home/runner/work/BrightID/BrightID/BrightID/android/app/build/outputs/bundle/release/app-release.aab
