--- a/BrightID/android/gradle.properties
+++ b/BrightID/android/gradle.properties
@@ -43,5 +43,5 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=false
 
-org.gradle.daemon=true
+# org.gradle.daemon=true
 AsyncStorage_db_size_in_MB=10
