--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -14,7 +14,7 @@
     "test:ios": "detox test -c ios.sim.debug",
     "test": "jest",
     "lint": "eslint 'src' --quiet --fix",
-    "postinstall": "npx jetify",
+    "postinstall": "npx jetify && patch-package",
     "test:watch": "npm test -- --watch",
     "updateSnap": "jest --updateSnapshot",
     "build:release": "cd android && ./gradlew assembleRelease && cd ..",
@@ -26,18 +26,18 @@
   "dependencies": {
     "@expo/react-native-action-sheet": "4.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/blur": "https://github.com/BrightID/react-native-blur",
+    "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.14",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/push-notification-ios": "1.10.1",
-    "@react-native-community/slider": "4.4.0",
+    "@react-native-community/slider": "4.4.1",
     "@react-native-community/viewpager": "4.2.2",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "6.5.7",
-    "@react-navigation/elements": "1.3.6",
+    "@react-navigation/elements": "1.3.13",
     "@react-navigation/native": "6.1.2",
-    "@react-navigation/native-stack": "6.9.1",
+    "@react-navigation/native-stack": "6.9.8",
     "@react-navigation/stack": "6.3.11",
     "@reduxjs/toolkit": "1.8.6",
     "apisauce": "2.1.6",
@@ -71,12 +71,12 @@
     "react-i18next": "12.1.4",
     "react-native": "0.71.1",
     "react-native-barcode-mask": "1.2.4",
-    "react-native-camera": "https://github.com/BrightID/react-native-camera",
-    "react-native-code-push": "7.0.5",
+    "react-native-camera": "4.2.1",
+    "react-native-code-push": "7.1.0",
     "react-native-contacts": "7.0.5",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.5.1",
-    "react-native-error-boundary": "1.1.16",
+    "react-native-error-boundary": "1.2.1",
     "react-native-gesture-handler": "2.9.0",
     "react-native-image-crop-picker": "0.39.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
@@ -88,9 +88,9 @@
     "react-native-phone-number-input": "2.1.0",
     "react-native-push-notification": "8.1.1",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "2.14.2",
+    "react-native-reanimated": "2.14.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.18.2",
+    "react-native-screens": "3.19.0",
     "react-native-spinkit": "1.5.1",
     "react-native-svg": "13.7.0",
     "react-native-tab-view": "2.15.2",
@@ -114,16 +114,16 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
-    "@rnx-kit/align-deps": "^2.0.3",
+    "@rnx-kit/align-deps": "^2.1.0",
     "@testing-library/jest-native": "^5.3.3",
-    "@testing-library/react-native": "^11.5.0",
+    "@testing-library/react-native": "^11.5.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/crypto-js": "^4.1.0",
-    "@types/jest": "^29.2.1",
+    "@types/jest": "^29.4.0",
     "@types/jsbn": "^1.2.30",
     "@types/lodash": "^4.14.178",
     "@types/qrcode": "^1.4.2",
-    "@types/ramda": "^0.27.38",
+    "@types/ramda": "^0.28.22",
     "@types/react": "^18.0.24",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
@@ -161,6 +161,8 @@
     "metro-react-native-babel-preset": "0.73.7",
     "mock-async-storage": "^2.2.0",
     "msw": "^0.49.2",
+    "patch-package": "^6.5.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "resolve": "^1.20.0",
@@ -169,32 +171,12 @@
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0"
   },
-  "resolutions": {
-    "react-devtools-core": "~4.25.0"
-  },
   "rnx-kit": {
-    "reactNativeVersion": "^0.70.3",
     "kitType": "app",
-    "capabilities": [
-      "animation",
-      "babel-preset-react-native",
-      "checkbox",
-      "core",
-      "core-android",
-      "core-ios",
-      "gestures",
-      "jest",
-      "navigation/native",
-      "navigation/stack",
-      "react",
-      "react-dom",
-      "react-test-renderer",
-      "safe-area",
-      "screens",
-      "storage",
-      "svg"
-    ],
     "alignDeps": {
+      "presets": [
+        "./exactVersionsPreset.js"
+      ],
       "requirements": [
         "react-native@0.71"
       ],
