--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -35,7 +35,6 @@
     "@react-native-community/blur": "4.4.1",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/slider": "4.5.6",
-    "@react-native-community/viewpager": "4.2.2",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/elements": "^1.3.31",
@@ -85,6 +84,7 @@
     "react-native-modal-overlay": "1.3.1",
     "react-native-modpow": "1.1.0",
     "react-native-network-info": "5.2.1",
+    "react-native-pager-view": "^6.7.0",
     "react-native-phone-number-input": "2.1.0",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.16.7",
