--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -45,7 +45,7 @@
     "apisauce": "3.1.0",
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
-    "compare-versions": "4.1.3",
+    "compare-versions": "6.1.1",
     "crypto-js": "3.3.0",
     "detox": "20.33.0",
     "ed2curve": "0.3.0",
@@ -53,12 +53,11 @@
     "events": "3.3.0",
     "expr-eval": "2.0.2",
     "fast-json-stable-stringify": "2.1.0",
-    "husky": "4.3.8",
     "i18next": "22.4.10",
     "immer": "8.0.1",
     "js-sha256": "0.9.0",
     "jsbn": "1.1.0",
-    "libphonenumber-js": "1.11.20",
+    "libphonenumber-js": "1.12.4",
     "lodash": "4.17.21",
     "moment": "2.30.1",
     "promise.any": "2.0.6",
@@ -74,7 +73,7 @@
     "react-native-contacts": "8.0.4",
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "5.1.0",
-    "react-native-error-boundary": "1.2.7",
+    "react-native-error-boundary": "1.2.9",
     "react-native-gesture-handler": "2.24.0",
     "react-native-image-crop-picker": "0.42.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
@@ -89,11 +88,11 @@
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.16.7",
     "react-native-safe-area-context": "5.2.0",
-    "react-native-screens": "4.9.0",
+    "react-native-screens": "4.9.1",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "15.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-tab-view": "2.15.2",
-    "react-native-url-polyfill": "1.3.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "10.2.0",
     "react-native-vision-camera": "^4.6.4",
     "react-redux": "7.2.8",
@@ -119,7 +118,7 @@
     "@react-native/eslint-config": "0.77.1",
     "@react-native/metro-config": "0.77.1",
     "@react-native/typescript-config": "0.77.1",
-    "@rnx-kit/align-deps": "3.0.3",
+    "@rnx-kit/align-deps": "3.0.4",
     "@testing-library/jest-native": "5.4.3",
     "@testing-library/react-native": "11.5.0",
     "@types/crypto-js": "4.2.2",
@@ -142,7 +141,7 @@
     "babel-plugin-transform-remove-console": "6.9.4",
     "enzyme": "3.11.0",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "10.0.1",
+    "eslint-config-prettier": "10.0.2",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-import-resolver-typescript": "^3.8.3",
     "eslint-plugin-babel": "5.3.1",
@@ -151,12 +150,13 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "fast-text-encoding": "^1.0.6",
     "i18next-parser": "3.0.0",
     "jest": "^29.7.0",
     "jetifier": "^2.0.0",
     "lint-staged": "15.4.3",
     "mock-async-storage": "2.9.0",
-    "msw": "1.0.1",
+    "msw": "2.7.3",
     "patch-package": "8.0.0",
     "postinstall-postinstall": "2.1.0",
     "prettier": "3.5.2",
