--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -26,7 +26,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn cache clean --all && yarn install --frozen-lockfile
 
       - name: debug build
         run: |
